Closed
Bug 319921
Opened 20 years ago
Closed 20 years ago
Remove "Create New Folder..." option from context menu for items in bookmark bar
Categories
(Camino Graveyard :: Toolbars & Menus, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: froodian, Assigned: sfraser_bugs)
Details
(Keywords: verified1.8)
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8) Gecko/20051211 Camino/1.0b1+
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8) Gecko/20051211 Camino/1.0b1+
As it stands, we have a "Create New Folder..." option in the context menu for items in the bookmark bar, but it's always disabled. We talked about this on IRC, and decided to take out the option, rather than enable it.
Note that this is only for items in the bookmark's bar, not empty space.
Reproducible: Always
Steps to Reproduce:
Updated•20 years ago
|
Assignee: mikepinkerton → sfraser_bugs
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Comment 1•20 years ago
|
||
Fixed.
Comment 2•20 years ago
|
||
v. on branch and trunk.
Status: RESOLVED → VERIFIED
Keywords: fixed1.8 → verified1.8
You need to log in
before you can comment on or make changes to this bug.
Description
•