Fix bug 319921: remove New Folder, and enable Copy Location for bookmark toolbar context clicks. Also land part of the code for bug 319491 (Reset Camino should clear visit counts), without yet hooking it up.